<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".MainActivity">

    <ScrollView
        android:layout_height="fill_parent"
        android:layout_width="fill_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/app_explanation"
                android:id="@+id/app_explanation"
                android:textSize="24sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="20dp"
                android:background="#666666" />

            <TextView
                android:text="@string/label_talktome"
                android:id="@+id/label_talktome"
                android:textSize="24sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/default_text"
                android:id="@+id/recog_text"
                android:textSize="24sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/japanese"
                android:id="@+id/button_japanese"
                android:singleLine="false"
                android:textSize="32sp"
                android:layout_marginTop="20dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/english"
                android:id="@+id/button_english"
                android:singleLine="false"
                android:textSize="32sp"
                android:layout_marginTop="20dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chinese"
                android:id="@+id/button_chinese"
                android:singleLine="false"
                android:textSize="32sp"
                android:layout_marginTop="20dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="20dp"
                android:background="#666666" />

            <TextView
                android:text="@string/label_accost"
                android:id="@+id/label_accost"
                android:textSize="24sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accost"
                android:id="@+id/button_accost"
                android:singleLine="false"
                android:textSize="32sp"
                android:layout_marginTop="20dp" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
